# nerdcli

./: Cargo.toml  README.md
assets/: nerdcli.toml
assets/quotes/en/: computer-science.toml  science-fiction.toml
src/: default_settings.rs  images.rs  main.rs  quotes.rs  settings.rs
